web/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
  name: nhsonline-web
spec:
  rules:
    - host: www-preview.devuks1.bitraft.io
      http:
        paths:
          - backend:
              serviceName: nhsonline-web
              servicePort: 80
            path: /
  tls:
    - hosts:
      - "www-preview.devuks1.bitraft.io"
      secretName: www-preview-devuks1-bitraft-io
